fixed padding and spacing on pomodoro app for better mobile use

--- a/PomodoroClock/css/style.css
+++ b/PomodoroClock/css/style.css
@@ -26,7 +26,7 @@ h1 {
   border-radius: 50%;
   width: 300px;
   height: 300px;
-  margin: 10px auto 80px;
+  margin: 40px auto 80px;
   cursor: pointer;
 }
 
@@ -50,7 +50,7 @@ h1 {
 
 .inc-down,
 .inc-up {
-  padding: 5px;
+  padding: 10px;
   cursor: pointer;
 }
 
